--- a/assets/plotly/plot_notebooks/intro.ipynb
+++ b/assets/plotly/plot_notebooks/intro.ipynb
@@ -234,7 +234,7 @@
     "\n",
     "from rectified_flow.rectified_flow import RectifiedFlow\n",
     "\n",
-    "set_seed(0)\n",
+    "set_seed(233)\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
     "from rectified_flow.datasets.toy_gmm import TwoPointGMM\n",
@@ -259,12 +259,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "set_seed(233)\n",
+    "\n",
     "x_0 = pi_0.sample([300])\n",
     "x_0_upper = x_0.clone()\n",
     "x_0_upper[:, 1] = torch.abs(x_0_upper[:, 1])\n",
     "x_0_lower = x_0.clone()\n",
-    "x_0_lower[:, 1] = -torch.abs(x_0_lower[:, 1])\n",
-    "\n",
+    "x_0_lower[:, 1] = -torch.abs(x_0_lower[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x_1_upper = pi_1.sample([300])\n",
     "x_1_lower = pi_1.sample([300])\n",
     "\n",
@@ -294,18 +303,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rectified_flow.models.toy_mlp import MLPVelocity\n",
+    "# from rectified_flow.models.toy_mlp import MLPVelocity\n",
     "\n",
-    "model = MLPVelocity(2, hidden_sizes = [64, 128, 128, 128, 64]).to(device)\n",
+    "# model = MLPVelocity(2, hidden_sizes = [64, 128, 128, 128, 64]).to(device)\n",
     "\n",
-    "rectified_flow = RectifiedFlow(\n",
-    "    data_shape=(2,),\n",
-    "    velocity_field=model,\n",
-    "    interp=\"straight\",\n",
-    "    source_distribution=pi_0,\n",
-    "    train_time_distribution=\"lognormal\",\n",
-    "    device=device,\n",
-    ")"
+    "# rectified_flow = RectifiedFlow(\n",
+    "#     data_shape=(2,),\n",
+    "#     velocity_field=model,\n",
+    "#     interp=\"straight\",\n",
+    "#     source_distribution=pi_0,\n",
+    "#     train_time_distribution=\"lognormal\",\n",
+    "#     device=device,\n",
+    "# )"
    ]
   },
   {
@@ -314,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-4, weight_decay=0.03)"
+    "# optimizer = torch.optim.AdamW(model.parameters(), lr=1e-4, weight_decay=0.03)"
    ]
   },
   {
@@ -323,28 +332,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 128\n",
+    "# batch_size = 128\n",
     "\n",
-    "losses = []\n",
+    "# losses = []\n",
     "\n",
-    "for step in range(10000):\n",
-    "\toptimizer.zero_grad()\n",
-    "\tidx = torch.randperm(n_samples)[:batch_size]\n",
-    "\t# x_0 = D0[idx].to(device)\n",
-    "\t# x_1 = D1[idx].to(device)\n",
+    "# for step in range(10000):\n",
+    "# \toptimizer.zero_grad()\n",
+    "# \tidx = torch.randperm(n_samples)[:batch_size]\n",
+    "# \t# x_0 = D0[idx].to(device)\n",
+    "# \t# x_1 = D1[idx].to(device)\n",
     "\n",
-    "\tx_0 = pi_0.sample([batch_size]).to(device)\n",
-    "\tx_1 = pi_1.sample([batch_size]).to(device)\n",
+    "# \tx_0 = pi_0.sample([batch_size]).to(device)\n",
+    "# \tx_1 = pi_1.sample([batch_size]).to(device)\n",
     "\t\n",
-    "\tloss = rectified_flow.get_loss(x_0, x_1)\n",
-    "\tloss.backward()\n",
-    "\toptimizer.step()\n",
-    "\tlosses.append(loss.item())\n",
+    "# \tloss = rectified_flow.get_loss(x_0, x_1)\n",
+    "# \tloss.backward()\n",
+    "# \toptimizer.step()\n",
+    "# \tlosses.append(loss.item())\n",
     "\n",
-    "\tif step % 1000 == 0:\n",
-    "\t\tprint(f\"Epoch {step}, Loss: {loss.item()}\")\n",
+    "# \tif step % 1000 == 0:\n",
+    "# \t\tprint(f\"Epoch {step}, Loss: {loss.item()}\")\n",
     "\t\t\n",
-    "plt.plot(losses)"
+    "# plt.plot(losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rectified_flow.models.kernel_method import NadarayaWatson\n",
+    "\n",
+    "velocity = NadarayaWatson(pi_0_sample=D0, pi_1_sample=D1, sample_size=5000, bandwidth=0.5, use_dot_x_t=True)\n",
+    "\n",
+    "print(velocity.interp.name)\n",
+    "\n",
+    "rectified_flow = RectifiedFlow(\n",
+    "    data_shape=(2,),\n",
+    "    velocity_field=velocity,\n",
+    "    interp=velocity.interp,\n",
+    "    source_distribution=pi_0,\n",
+    "    device=device,\n",
+    ")\n"
    ]
   },
   {
@@ -397,13 +427,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "Z_0 = rectified_flow.sample_source_distribution(batch_size=50000)\n",
     "\n",
-    "Z_1 = euler_sampler_1rf_unconditional.sample_loop(x_0=Z_0, num_steps=1000).trajectories[-1]\n",
+    "Z_1 = euler_sampler_1rf_unconditional.sample_loop(x_0=Z_0, num_steps=100).trajectories[-1]\n",
     "\n",
     "# mask = (Z_0[:, 1] * Z_1[:, 1]) > 0\n",
     "\n",
@@ -413,13 +443,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import copy\n",
+    "reflow_velocity = NadarayaWatson(pi_0_sample=Z_0, pi_1_sample=Z_1, sample_size=5000, bandwidth=0.5, use_dot_x_t=True)\n",
     "\n",
-    "reflow = copy.deepcopy(rectified_flow)"
+    "reflow = RectifiedFlow(\n",
+    "    data_shape=(2,),\n",
+    "\tvelocity_field=reflow_velocity,\n",
+    "\tinterp=reflow_velocity.interp,\n",
+    "\tsource_distribution=pi_0,\n",
+    "\tdevice=device,\n",
+    ")"
    ]
   },
   {
@@ -428,29 +464,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = torch.optim.AdamW(reflow.velocity_field.parameters(), lr=1e-3)\n",
-    "batch_size = 1024\n",
+    "# import copy\n",
     "\n",
-    "losses = []\n",
+    "# reflow = copy.deepcopy(rectified_flow)\n",
     "\n",
-    "for step in range(5000):\n",
-    "\toptimizer.zero_grad()\n",
-    "\tidx = torch.randperm(Z_0.shape[0])[:batch_size]\n",
-    "\tx_0 = Z_0[idx]\n",
-    "\tx_1 = Z_1[idx]\n",
+    "# optimizer = torch.optim.AdamW(reflow.velocity_field.parameters(), lr=1e-3)\n",
+    "# batch_size = 1024\n",
+    "\n",
+    "# losses = []\n",
+    "\n",
+    "# for step in range(5000):\n",
+    "# \toptimizer.zero_grad()\n",
+    "# \tidx = torch.randperm(Z_0.shape[0])[:batch_size]\n",
+    "# \tx_0 = Z_0[idx]\n",
+    "# \tx_1 = Z_1[idx]\n",
     "\t\n",
-    "\tx_0 = x_0.to(device)\n",
-    "\tx_1 = x_1.to(device)\n",
+    "# \tx_0 = x_0.to(device)\n",
+    "# \tx_1 = x_1.to(device)\n",
     "\t\n",
-    "\tloss = reflow.get_loss(x_0, x_1)\n",
-    "\tloss.backward()\n",
-    "\toptimizer.step()\n",
-    "\tlosses.append(loss.item())\n",
+    "# \tloss = reflow.get_loss(x_0, x_1)\n",
+    "# \tloss.backward()\n",
+    "# \toptimizer.step()\n",
+    "# \tlosses.append(loss.item())\n",
     "\n",
-    "\tif step % 1000 == 0:\n",
-    "\t\tprint(f\"Epoch {step}, Loss: {loss.item()}\")\n",
+    "# \tif step % 1000 == 0:\n",
+    "# \t\tprint(f\"Epoch {step}, Loss: {loss.item()}\")\n",
     "    \n",
-    "plt.plot(losses)"
+    "# plt.plot(losses)"
    ]
   },
   {
@@ -504,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,10 +563,10 @@
     "    num_trajectories_3: int,\n",
     "    # Common parameters\n",
     "    dimensions: list[int] = [0, 1],\n",
-    "    alpha_trajectories: float = 0.5,\n",
+    "    alpha_trajectories: float = 0.7,\n",
     "    alpha_particles: float = 0.8,\n",
-    "    alpha_gt_points: float = 1.0,\n",
-    "    markersize: int = 3,\n",
+    "    alpha_gt_points: float = 0.8,\n",
+    "    markersize: int = 4,\n",
     "    range_x=[-1.8, 16.8],\n",
     "    range_y=[-9.3, 9.3],\n",
     "    caption1=r\"$\\text{Linear Interpolation } X_t$\",\n",
@@ -545,6 +585,8 @@
     "\n",
     "        # Prepare color mappings\n",
     "        particle_colors = [\n",
+    "\t\t\t\"RoyalBlue\",\n",
+    "\t\t\t\"OrangeRed\",\n",
     "            \"#1E90FF\",\n",
     "            \"#FF69B4\",\n",
     "            \"#7B68EE\",\n",
@@ -558,6 +600,8 @@
     "        ]\n",
     "\n",
     "        trajectory_colors = [\n",
+    "\t\t\t\"DodgerBlue\",\n",
+    "\t\t\t\"Tomato\",\n",
     "            \"#8ABDE5\",\n",
     "            \"#E09CAF\",\n",
     "            \"#B494E1\",\n",
@@ -571,7 +615,7 @@
     "        ]\n",
     "\n",
     "        marker_list = [\n",
-    "            \"circle\", \"cross\", \"x\", \"square\", \"star\", \"diamond\",  \n",
+    "            \"circle\", \"circle\", \"x\", \"square\", \"star\", \"diamond\",  \n",
     "            \"triangle-up\", \"triangle-down\", \"hexagram\"\n",
     "        ]\n",
     "\n",
@@ -623,7 +667,7 @@
     "                    x=all_line_x,\n",
     "                    y=all_line_y,\n",
     "                    mode=\"lines\",\n",
-    "                    line=dict(dash=\"solid\", color=trajectory_color, width=0.5),\n",
+    "                    line=dict(dash=\"solid\", color=trajectory_color, width=0.6),\n",
     "                    opacity=alpha_trajectories,\n",
     "                    showlegend=False,\n",
     "                    hoverinfo=\"skip\",\n",
@@ -644,7 +688,7 @@
     "                        symbol=marker_symbol\n",
     "                    ),\n",
     "                    showlegend=False,\n",
-    "                    hovertemplate='(%{x:.3f}, %{y:.3f})<extra>Source dist</extra>'\n",
+    "                    hovertemplate='(%{x:.3f}, %{y:.3f})<extra>Initial noise</extra>'\n",
     "                )\n",
     "            )\n",
     "            current_trace_index += 1\n",
@@ -668,9 +712,9 @@
     "                    x=D1_gt_samples[:, dim0],\n",
     "                    y=D1_gt_samples[:, dim1],\n",
     "                    mode=\"markers\",\n",
-    "                    marker=dict(size=markersize, opacity=alpha_gt_points, color=\"red\"),\n",
+    "                    marker=dict(size=markersize, opacity=alpha_gt_points, color=\"DarkOrchid\"),\n",
     "                    showlegend=False,\n",
-    "                    hovertemplate='(%{x:.3f}, %{y:.3f})<extra>GT data</extra>'\n",
+    "                    hovertemplate='(%{x:.3f}, %{y:.3f})<extra>Target data</extra>'\n",
     "                )\n",
     "            )\n",
     "            current_trace_index += 1\n",
@@ -801,7 +845,7 @@
     "        {\n",
     "            \"type\": \"buttons\",\n",
     "            \"x\": 0.5,\n",
-    "            \"y\": 0.28,\n",
+    "            \"y\": 0.25,\n",
     "            \"xanchor\": \"center\",\n",
     "            \"yanchor\": \"top\",\n",
     "            \"font\": dict(size=12),\n",
@@ -832,7 +876,6 @@
     "            zeroline=False,\n",
     "            showline=False,\n",
     "            range=range_x,\n",
-    "            scaleanchor=\"y\",\n",
     "            row=1, col=i\n",
     "        )\n",
     "        fig.update_yaxes(\n",
@@ -842,7 +885,6 @@
     "            zeroline=False,\n",
     "            showline=False,\n",
     "            range=range_y,\n",
-    "            scaleanchor=\"x\",\n",
     "            row=1, col=i\n",
     "        )\n",
     "\n",
@@ -853,8 +895,8 @@
     "        # height=450,\n",
     "        # width=950,\n",
     "        autosize=True, # Turn this on when saving to HTML\n",
-    "        margin=dict(l=5, r=5, t=0, b=5),\n",
-    "        plot_bgcolor=\"white\",\n",
+    "        margin=dict(l=0, r=5, t=0, b=5),\n",
+    "        template=\"plotly_white\",\n",
     "    )\n",
     "\n",
     "    # After layout update, we can get domain info\n",
@@ -872,7 +914,7 @@
     "    # y 放在稍低于子图底部的位置，如 y = yaxis1_domain[0] - 一定间隔\n",
     "    # 因为只有一行子图，yaxis1.domain 应该是 [0,1]\n",
     "    # 我们将 caption 放在 y = -0.25(参考先前手动指定值)\n",
-    "    y_caption = yaxis1_domain[0] + 0.05\n",
+    "    y_caption = yaxis1_domain[0] + 0.01\n",
     "\n",
     "    fig.add_annotation(\n",
     "        x=x_mid_1, y=y_caption,\n",
@@ -905,7 +947,7 @@
     "    fig.show()\n",
     "\n",
     "    fig.write_html(\n",
-    "        'rf_three_in_one.html', \n",
+    "        './intro_rf_three_in_one.html', \n",
     "        full_html=True,\n",
     "        include_plotlyjs=\"cdn\",\n",
     "    \tinclude_mathjax='cdn', \n",
@@ -929,9 +971,9 @@
     "    num_trajectories_2=150,\n",
     "    num_trajectories_3=150,\n",
     "    dimensions=[0, 1],\n",
-    "    markersize=3,\n",
+    "    markersize=4,\n",
     "    alpha_trajectories=0.7,\n",
-    "    alpha_particles=0.8,\n",
+    "    alpha_particles=0.7,\n",
     "    alpha_gt_points=0.7,\n",
     ")"
    ]
