--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -108,7 +108,7 @@ Rectified flow is constructed in the following ways:
 The first step is to build an interpolation process $$\{X_t\} = \{X_t : t \in [0, 1]\}$$ that smoothly interpolates between $$X_0$$ and $$X_1$$​. Although general choices are possible, let us consider the canonical choice of straight-line interpolation:
 
 $$
-X_t = t X_1 + (1 - t) X_0.X_t = t X_1 + (1 - t) X_0.
+X_t = t X_1 + (1 - t) X_0.
 $$
 
 Here the interpolation $$\{X_t\}$$ is a stochastic process generated in an **"anchor-and-bridge"** way: we first sample the endpoints $$X_0$$ and $$X_1$$ and then sample the intermediate trajectory connecting them.
@@ -133,7 +133,7 @@ $$
 v_t^*(x) = \mathbb{E} \left[ \dot{X}_t \mid X_t = x \right],
 $$
 
-which is the conditional expectation of the slope $$\dot{X}_t$$ for all the interpolation trajectories passing through a given point $$X_t = x$$. If multiple trajectories pass point $$X_t=x$$, the velocity $v_t^*(x)$ is the average of $$\dot X_t$$ for these trajectories.
+which is the conditional expectation of the slope $$\dot{X}_t$$ for all the interpolation trajectories passing through a given point $$X_t = x$$. If multiple trajectories pass point $$X_t=x$$, the velocity $$v_t^*(x)$$ is the average of $$\dot X_t$$ for these trajectories.
 
 With the canonical straight interpolation $$X_t = t X_1+(1-t)X_0$$, we have $$\dot{X}_t = X_1 - X_0$$ by taking the derivative of $$X_t$$ with respect to $$t$$. It yields:
 
