fixed book link

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -50,7 +50,7 @@ toc:
 
 ## Overview
 
-This blog provides a brief introduction to rectified flow, based on Chapter 1 of these [lecture notes](https://github.com/lqiang67/rectified-flow/tree/main/pdf). 
+This blog provides a brief introduction to rectified flow, based on Chapter 1 of these [lecture notes](https://www.cs.utexas.edu/~lqiang/PDF/flow_book.pdf). 
 For more introduction, please refer to the original papers<d-cite key="liu2022flow,liu2022rectified"></d-cite> and these [blogs](https://www.cs.utexas.edu/~lqiang/rectflow/html/intro.html). 
 
 ## Problem: Learning Flow Generative Models
