--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -26,7 +26,7 @@ typograms: true
 bibliography: reference.bib
 
 authors:
-  - name: Rectified Flow Group
+  - name: Runlong Liao
     url: "mailto:rectifiedflow@gmail.com"
     affiliations:
       name: UT Austin
