Fix wording and clarify intersection points in intro.md

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -171,7 +171,7 @@ We illustrate the intuition in Fig.2:
 
 - In the interpolation process $$\{X_t\}$$, different trajectories may have intersecting points, resulting in multiple possible values of $$\dot X_t$$ associated with a same point $$X_t$$ due to uncertainty about which trajectory it was drawn from (Fig.2a).
 - In contrast, by the definition of an ODE $$\dot{Z}_t = v_t^*(Z_t)$$, the update direction $$\dot{Z}_t$$ at each point $$Z_t$$ is uniquely determined by $$Z_t$$, making it impossible for different trajectories of $\{Z_t\}$ to intersect and then diverge along different directions.
-- Hence at these intersection points of $$\{X_t\}$$ where $\{\dot X_t\}$ is uncertain and non-unique, the ODE $$\{Z_t\}$$ “derandomizes” the update direction by following the conditional expectation $$\displaystyle v_t^*(X_t) = \mathbb{E}[\dot{X}_t \mid X_t].$$ Consequently, the trajectories of the ODE "reassemble" the interpolation trajectories in a way that avoids intersections. See Fig.2(b). 
+- Hence at these intersection points of $$\{X_t\}$$ where $$\{\dot X_t\}$$ is uncertain and non-unique, the ODE $$\{Z_t\}$$ “derandomizes” the update direction by following the conditional expectation $$\displaystyle v_t^*(X_t) = \mathbb{E}[\dot{X}_t \mid X_t].$$ Consequently, the trajectories of the ODE "reassemble" the interpolation trajectories in a way that avoids intersections. See Fig.2(b). 
 - Since ODE trajectories $\{Z_t\}$ cannot intersect, they must curve at potential intersection points to "rewire" the original interpolation paths and avoid crossing.
 
 
@@ -204,7 +204,7 @@ We illustrate the intuition in Fig.2:
   </figure>
 </div>
 
-Figure 3 illustrates a close-up view of how rectification “rewires” interpolation trajectories. Consider two "beams" of interpolation trajectories intersecting to form the "region of confusion" (shaded area in the middle). Within this region, a particle moving along the rectified flow follows the averaged direction $v^*_t$. Upon exiting, the particle joins one of the original interpolation streams based on its exit side and continues moving. Since rectified flow trajectories do not intersect within the region, they remain separated and exit from their respective sides, effectively "rewiring" the original interpolation trajectories.
+Figure 3 illustrates a close-up view of how rectification “rewires” interpolation trajectories. Consider two "beams" of interpolation trajectories intersecting to form the "region of confusion" (shaded area in the middle). Within this region, a particle moving along the rectified flow follows the averaged direction $$v^*_t$$. Upon exiting, the particle joins one of the original interpolation streams based on its exit side and continues moving. Since rectified flow trajectories do not intersect within the region, they remain separated and exit from their respective sides, effectively "rewiring" the original interpolation trajectories.
 
 What makes rectified flow $$\{Z_t\}$$ useful is that it preserves the marginal distributions of $$\{X_t\}$$ at each point while resulting in a "better" coupling $$(Z_0, Z_1)$$ in terms of optimal transport:
 
