Add citation_meta to intro.md

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -34,6 +34,8 @@ authors:
   - name: Xixi Hu
   - name: Qiang Liu
 
+citation_meta: true
+
 toc:
   - name: "Overview"
   - name: "Problem: Learning Flow Generative Models"
